<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activitys.MainActivity">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:contentDescription="@string/todo"
                android:paddingTop="70dp"
                android:scaleType="fitCenter"
                android:textAlignment="center"
                app:srcCompat="@drawable/img" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_user"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/colorAccent"
                app:endIconTint="@color/colorGris">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:shadowColor="#000000"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_password"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/colorAccent"
                app:counterOverflowTextColor="@color/colorAccent"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorGris">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#000000"
                    android:textColorHint="#757575"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:enabled="true"
                android:paddingTop="10dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                app:strokeWidth="1dp"
                app:backgroundTint="@color/moneda"
                app:cornerRadius="23dp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="207dp"
                android:layout_height="77dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/me_olvide_la_contrase_a"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>