<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="60dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="center"
                android:layout_weight="0.50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/a_adir_lectura_titulo_update"
                    android:textColor="@color/colorGris"
                    android:textSize="20sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="-60dp"
                android:layout_weight="0.50">
                <ImageView
                    android:src="@drawable/ic_list_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:scaleType="center"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="5dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/lnyt_text_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/agregar_nueva_lectura"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/colorAccent"
                    app:endIconTint="@color/colorGris">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_lectura"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:shadowColor="#000000"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        android:textSize="18sp"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/agregar_importe_update"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/colorAccent"
                    app:endIconTint="@color/colorGris">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_importe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:shadowColor="#000000"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        android:textSize="18sp"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:paddingVertical="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
            <Button android:id="@+id/btn_cancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                style="?android:attr/buttonBarButtonStyle" />
            <Button android:id="@+id/btn_ok"
                android:text="@string/agregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>