<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:textColor="@color/white"
            android:text="@string/action_sign_up"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="115dp"
            android:layout_marginBottom="60dp"
            android:textSize="28dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_phone"

            android:layout_marginTop="100dp"
            android:layout_marginBottom="15dp"
            app:endIconTint="@color/colorGris"
            app:boxBackgroundColor="@color/white"
            app:counterTextColor="@color/black"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorAccent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_number_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="phone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombres Completos"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorGris"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Apellidos Completos"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorGris"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Dirección"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorGris"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorGris"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_user"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorGris"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorAccent"
            app:counterOverflowTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cornerRadius="23dp"
            android:textColor="@color/colorAccent"
            android:enabled="true"
            android:text="@string/action_register"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="3dp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>